@@ -3,6 +3,8 @@ PHP                                                                        NEWS
 ?? ??? 2016 PHP 7.0.6
 
 - Core: 
+  . Added ability to disable huge pages in Zend Memeory Manager through
+    the environment variable USE_ZEND_ALLOC_HUGE_PAGES=0. (Dmitry)
   . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)
 
 - ODBC:
